feat: add optional files storage profile
